fix dark mode

--- a/src/scss/block/dataview/view/board.scss
+++ b/src/scss/block/dataview/view/board.scss
@@ -26,7 +26,6 @@
             .column { width: 254px; flex-shrink: 0; display: flex; flex-direction: column; position: relative; }
             .column {
 				.bgColor { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; opacity: 0.5; }
-				.bgColor-default { background-color: #f1f0ed; }
 
                 .head { cursor: grab; color: $colorDarkGrey; width: 100%; position: relative; padding: 8px 10px 8px 16px; }
 				.head * { cursor: grab; }
